# Turtlesim

install/: local_setup.sh  setup.sh
install/assignment1/lib/assignment1/: cleaner.py  tracker.py
install/assignment1/share/assignment1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment1/share/assignment1/cmake/: assignment1Config.cmake
log/: latest_build  latest_list
src/assignment1/: CMakeLists.txt  assignment1.txt
src/assignment1/launch/: assignment1.launch.py
src/assignment1/scripts/: cleaner.py
